# f2v2f

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD_AND_RUN.md  COMPLETE_GUIDE.md  COMPRESSION_STRATEGY.md  DEPLOYMENT.md  Dockerfile.compose-backend  Dockerfile.compose-frontend  Makefile  Makefile.new  QUICK_START.md  README.md  docker-compose.new.yml  docker-compose.yml  nginx.conf  setup.sh  start.sh  test_pipeline.sh  test_pipeline_large.sh
.github/: copilot-instructions.md
backend/: README.md  app.py  f2v2f.db  f2v2f.py  go.mod  go.sum  main.go  requirements.txt  setup.py  test_cycle.py  test_decode_roundtrip.go  test_encode.py  test_encoding  test_encoding.go  test_ffmpeg.py  test_full_roundtrip.go  test_small  test_small.go  test_threading.py
backend/f2v2f/: bindings.go
backend/outputs/: 5229d5ba-bd11-4f68-9626-bd1379626354_README.md
backend/uploads/: test_input.txt
examples/: decode_video.rs  encode_file.rs  golang_binding.go  python_binding.py  typescript_binding.ts
frontend/: .env.example  .gitignore  README.md  next.config.js  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/app/decode/: page.tsx
frontend/components/: FileHistory.tsx  FilePreview.tsx  FileUploadForm.tsx  JobQueue.tsx  JobStatus.tsx  StatusModal.tsx
frontend/lib/: api.ts  useWebSocket.ts
frontend/styles/: globals.css
lib/: Cargo.toml  README.md
lib/src/: config.rs  decoder.rs  encoder.rs  error.rs  ffi.rs  image_generator.rs  lib.rs  main.rs  video_composer.rs
(+2 files in other folders)
